syntax = "proto3";

package com.example.drone;

option java_multiple_files = true;
option java_package = "com.example.drone";
option java_outer_classname = "FlightControllerProto";

service FlightControllerService {
    rpc subscribeGpsInfo(SubscribeGpsInfoRequest) returns (stream GpsInfoResponse);
}

enum GpsSignalLevel {
    LEVEL_0 = 0;
    LEVEL_1 = 1;
    LEVEL_2 = 2;
    LEVEL_3 = 3;
    LEVEL_4 = 4;
    LEVEL_5 = 5;
}

message SubscribeGpsInfoRequest {}

message GpsInfo {
    int32 numSatellites = 1;
    GpsSignalLevel signalLevel = 2;
}

message GpsInfoResponse {
    GpsInfo gpsInfo = 1;
}
